--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+.font-outfit {
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.backgroundColor {
+  background-image: linear-gradient(135deg, #e3ffdc, #fff, #efffcc);
+}
+
+.Users_Background_color {
+  background-image: linear-gradient(135deg, #e3ffdc, #efffcc);
+}
 
 body {
-    background: white;
+  background: white;
 }
 .custom-form {
-    border: none !important;
-  }
+  border: none !important;
+}
 
-  .CircularProgressbar-text {
-    text-anchor: middle;
-  }
+.CircularProgressbar-text {
+  text-anchor: middle;
+}
+.rounded_Important {
+  border-radius: 24px !important;
+}
 
-.class1{
+.class1 {
   border: none;
 }
 
 .active {
-  background-color: #DDFF8F;
+  background-color: #ddff8f;
   border-radius: 10px;
   color: black;
 }
+
