--- a/app/globals.css
+++ b/app/globals.css
@@ -1,44 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .font-outfit {
-  font-family: "Outfit", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+	font-family: "Outfit", sans-serif;
+	font-optical-sizing: auto;
+	font-style: normal;
 }
 
 .backgroundColor {
-  background-image: linear-gradient(135deg, #e3ffdc, #fff, #efffcc);
+	background-image: linear-gradient(135deg, #e3ffdc, #fff, #efffcc);
 }
 
 .Users_Background_color {
-  background-image: linear-gradient(135deg, #e3ffdc, #efffcc);
+	background-image: linear-gradient(135deg, #e3ffdc, #efffcc);
 }
 
 body {
-  background: white;
+	background: white;
 }
 .custom-form {
-  border: none !important;
+	border: none !important;
 }
 
 .CircularProgressbar-text {
-  text-anchor: middle;
+	text-anchor: middle;
 }
 .rounded_Important {
-  border-radius: 24px !important;
+	border-radius: 24px !important;
 }
 
 .class1 {
-  border: none;
+	border: none;
 }
 
 .active {
-  background-color: #ddff8f;
-  border-radius: 10px;
-  color: black;
+	background-color: #ddff8f;
+	border-radius: 10px;
+	color: black;
 }
-
