--- a/app/globals.css
+++ b/app/globals.css
@@ -196,3 +196,53 @@ body {
     box-shadow: -24px 0 #dbdbdb, 24px 0 #cdff5a;
   }
 }
+.login-loader {
+	width: 40px;
+	padding: 5px;
+	aspect-ratio: 1;
+	border-radius: 50%;
+	background: #DDFF8F;
+	--_m: 
+	  conic-gradient(#0000 10%,#000),
+	  linear-gradient(#000 0 0) content-box;
+	-webkit-mask: var(--_m);
+			mask: var(--_m);
+	-webkit-mask-composite: source-out;
+			mask-composite: subtract;
+	animation: l3 1s infinite linear;
+  }
+  @keyframes l3 {to{transform: rotate(1turn)}}
+
+  .submit-loader {
+    width: 30px;
+    padding: 5px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #000000;
+    --_m: 
+      conic-gradient(#0000 10%,#000),
+      linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+        mask: var(--_m);
+    -webkit-mask-composite: source-out;
+        mask-composite: subtract;
+    animation: l3 1s infinite linear;
+    }
+    @keyframes l3 {to{transform: rotate(1turn)}}
+  
+    .delete-loader {
+      width: 20px;
+      padding: 3px;
+      aspect-ratio: 1;
+      border-radius: 50%;
+      background: #ebebeb;
+      --_m: 
+        conic-gradient(#0000 10%,#000),
+        linear-gradient(#000 0 0) content-box;
+      -webkit-mask: var(--_m);
+          mask: var(--_m);
+      -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+      animation: l3 1s infinite linear;
+      }
+      @keyframes l3 {to{transform: rotate(1turn)}}
